--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
-h1{
-    color:darkorange;
+#title{
+    font-size: 50px;
+    text-align: center;
+    padding: 10px;
+}
+.first-blog{
+    width: 50%;
+}
+section{
+    display: flex;
+    margin: 50px;
+    font-size: 30px;
+    padding: auto;
+}
+body{
+    font-family: 'Poppins', sans-serif;
+
+}
+a{
+    border: 1px solid brown;
+    padding: 10px 20px;
+    background-color: burlywood;
+    border-radius: 5px;
+    
+}
+#top-banner{
+    align-content:end;
+}
+span{
+    color:orange;
 }
